# Agentic-Reinforcement-Learning-for-Event-Forecasting

./: .gitignore  README.md  pyproject.toml
examples/: events.csv  news.csv
scripts/: run_demo.py
src/agentic_event_forecasting/: __init__.py  schema.py
src/agentic_event_forecasting/agent/: __init__.py  policy.py
src/agentic_event_forecasting/data/: __init__.py  dataset.py
src/agentic_event_forecasting/env/: __init__.py  environment.py
src/agentic_event_forecasting/evaluation/: __init__.py  metrics.py
src/agentic_event_forecasting/inference/: __init__.py  predictor.py
src/agentic_event_forecasting/reward/: __init__.py  rewards.py
src/agentic_event_forecasting/rollout/: __init__.py  generator.py
src/agentic_event_forecasting/tools/: __init__.py  base.py  event_retrieval.py  graph_analysis.py  news_retrieval.py  relation_statistics.py
src/agentic_event_forecasting/trainer/: __init__.py  advantage.py  grpo.py
tests/: test_core_pipeline.py
