[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-event-forecasting"
version = "0.1.0"
description = "Agentic reinforcement learning framework for evidence-grounded event forecasting."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Cheng Hu" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
